@@ -38,15 +38,11 @@ end_import
 
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
+name|java
 operator|.
 name|util
 operator|.
-name|BytesRef
+name|Objects
 import|;
 end_import
 
@@ -60,7 +56,7 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|StringHelper
+name|BytesRef
 import|;
 end_import
 
@@ -1021,7 +1017,7 @@ name|o
 decl_stmt|;
 return|return
 operator|(
-name|StringHelper
+name|Objects
 operator|.
 name|equals
 argument_list|(
@@ -1050,34 +1046,35 @@ name|this
 operator|.
 name|reverse
 operator|&&
-operator|(
-name|other
-operator|.
-name|comparatorSource
-operator|==
-literal|null
-condition|?
-name|this
-operator|.
-name|comparatorSource
-operator|==
-literal|null
-else|:
-name|other
-operator|.
-name|comparatorSource
+name|Objects
 operator|.
 name|equals
 argument_list|(
 name|this
 operator|.
 name|comparatorSource
+argument_list|,
+name|other
+operator|.
+name|comparatorSource
 argument_list|)
-operator|)
+operator|&&
+name|Objects
+operator|.
+name|equals
+argument_list|(
+name|this
+operator|.
+name|missingValue
+argument_list|,
+name|other
+operator|.
+name|missingValue
+argument_list|)
 operator|)
 return|;
 block|}
-comment|/** Returns true if<code>o</code> is equal to this.  If a    *  {@link FieldComparatorSource} was provided, it must properly    *  implement hashCode (unless a singleton is always    *  used). */
+comment|/** Returns a hash code for this {@link SortField} instance.  If a    *  {@link FieldComparatorSource} was provided, it must properly    *  implement hashCode (unless a singleton is always used). */
 annotation|@
 name|Override
 DECL|method|hashCode
@@ -1086,58 +1083,21 @@ name|int
 name|hashCode
 parameter_list|()
 block|{
-name|int
-name|hash
-init|=
-name|type
-operator|.
-name|hashCode
-argument_list|()
-operator|^
-literal|0x346565dd
-operator|+
-name|Boolean
-operator|.
-name|valueOf
-argument_list|(
-name|reverse
-argument_list|)
-operator|.
-name|hashCode
-argument_list|()
-operator|^
-literal|0xaf5998bb
-decl_stmt|;
-if|if
-condition|(
-name|field
-operator|!=
-literal|null
-condition|)
-name|hash
-operator|+=
-name|field
-operator|.
-name|hashCode
-argument_list|()
-operator|^
-literal|0xff5685dd
-expr_stmt|;
-if|if
-condition|(
-name|comparatorSource
-operator|!=
-literal|null
-condition|)
-name|hash
-operator|+=
-name|comparatorSource
-operator|.
-name|hashCode
-argument_list|()
-expr_stmt|;
 return|return
+name|Objects
+operator|.
 name|hash
+argument_list|(
+name|field
+argument_list|,
+name|type
+argument_list|,
+name|reverse
+argument_list|,
+name|comparatorSource
+argument_list|,
+name|missingValue
+argument_list|)
 return|;
 block|}
 DECL|field|bytesComparator
