@@ -308,44 +308,6 @@ specifier|private
 name|StringHelper
 parameter_list|()
 block|{   }
-DECL|method|equals
-specifier|public
-specifier|static
-name|boolean
-name|equals
-parameter_list|(
-name|String
-name|s1
-parameter_list|,
-name|String
-name|s2
-parameter_list|)
-block|{
-if|if
-condition|(
-name|s1
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-name|s2
-operator|==
-literal|null
-return|;
-block|}
-else|else
-block|{
-return|return
-name|s1
-operator|.
-name|equals
-argument_list|(
-name|s2
-argument_list|)
-return|;
-block|}
-block|}
 comment|/**    * Returns<code>true</code> iff the ref starts with the given prefix.    * Otherwise<code>false</code>.    *     * @param ref    *         the {@code byte[]} to test    * @param prefix    *         the expected prefix    * @return Returns<code>true</code> iff the ref starts with the given prefix.    *         Otherwise<code>false</code>.    */
 DECL|method|startsWith
 specifier|public
