@@ -206,6 +206,308 @@ name|TestSort
 extends|extends
 name|LuceneTestCase
 block|{
+DECL|method|assertEquals
+specifier|private
+name|void
+name|assertEquals
+parameter_list|(
+name|Sort
+name|a
+parameter_list|,
+name|Sort
+name|b
+parameter_list|)
+block|{
+name|LuceneTestCase
+operator|.
+name|assertEquals
+argument_list|(
+name|a
+argument_list|,
+name|b
+argument_list|)
+expr_stmt|;
+name|LuceneTestCase
+operator|.
+name|assertEquals
+argument_list|(
+name|b
+argument_list|,
+name|a
+argument_list|)
+expr_stmt|;
+name|LuceneTestCase
+operator|.
+name|assertEquals
+argument_list|(
+name|a
+operator|.
+name|hashCode
+argument_list|()
+argument_list|,
+name|b
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|assertDifferent
+specifier|private
+name|void
+name|assertDifferent
+parameter_list|(
+name|Sort
+name|a
+parameter_list|,
+name|Sort
+name|b
+parameter_list|)
+block|{
+name|assertFalse
+argument_list|(
+name|a
+operator|.
+name|equals
+argument_list|(
+name|b
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|b
+operator|.
+name|equals
+argument_list|(
+name|a
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|a
+operator|.
+name|hashCode
+argument_list|()
+operator|==
+name|b
+operator|.
+name|hashCode
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testEquals
+specifier|public
+name|void
+name|testEquals
+parameter_list|()
+block|{
+name|SortField
+name|sortField1
+init|=
+operator|new
+name|SortField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|)
+decl_stmt|;
+name|SortField
+name|sortField2
+init|=
+operator|new
+name|SortField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|Sort
+argument_list|(
+name|sortField1
+argument_list|)
+argument_list|,
+operator|new
+name|Sort
+argument_list|(
+name|sortField2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sortField2
+operator|=
+operator|new
+name|SortField
+argument_list|(
+literal|"bar"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|)
+expr_stmt|;
+name|assertDifferent
+argument_list|(
+operator|new
+name|Sort
+argument_list|(
+name|sortField1
+argument_list|)
+argument_list|,
+operator|new
+name|Sort
+argument_list|(
+name|sortField2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sortField2
+operator|=
+operator|new
+name|SortField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|LONG
+argument_list|)
+expr_stmt|;
+name|assertDifferent
+argument_list|(
+operator|new
+name|Sort
+argument_list|(
+name|sortField1
+argument_list|)
+argument_list|,
+operator|new
+name|Sort
+argument_list|(
+name|sortField2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sortField2
+operator|=
+operator|new
+name|SortField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|)
+expr_stmt|;
+name|sortField2
+operator|.
+name|setMissingValue
+argument_list|(
+name|SortField
+operator|.
+name|STRING_FIRST
+argument_list|)
+expr_stmt|;
+name|assertDifferent
+argument_list|(
+operator|new
+name|Sort
+argument_list|(
+name|sortField1
+argument_list|)
+argument_list|,
+operator|new
+name|Sort
+argument_list|(
+name|sortField2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sortField2
+operator|=
+operator|new
+name|SortField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|Sort
+argument_list|(
+name|sortField1
+argument_list|)
+argument_list|,
+operator|new
+name|Sort
+argument_list|(
+name|sortField2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sortField2
+operator|=
+operator|new
+name|SortField
+argument_list|(
+literal|"foo"
+argument_list|,
+name|SortField
+operator|.
+name|Type
+operator|.
+name|STRING
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertDifferent
+argument_list|(
+operator|new
+name|Sort
+argument_list|(
+name|sortField1
+argument_list|)
+argument_list|,
+operator|new
+name|Sort
+argument_list|(
+name|sortField2
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 comment|/** Tests sorting on type string */
 DECL|method|testString
 specifier|public
