@@ -63,61 +63,6 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|testEquals
-specifier|public
-name|void
-name|testEquals
-parameter_list|()
-block|{
-name|assertTrue
-argument_list|(
-name|StringHelper
-operator|.
-name|equals
-argument_list|(
-literal|"foo"
-argument_list|,
-literal|"foo"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertFalse
-argument_list|(
-name|StringHelper
-operator|.
-name|equals
-argument_list|(
-literal|"foo"
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertFalse
-argument_list|(
-name|StringHelper
-operator|.
-name|equals
-argument_list|(
-literal|null
-argument_list|,
-literal|"foo"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|StringHelper
-operator|.
-name|equals
-argument_list|(
-literal|null
-argument_list|,
-literal|null
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
 DECL|method|testStartsWith
 specifier|public
 name|void
